240916 2333 front Split file

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -69,7 +69,7 @@
     </div>
     <!-- Overlay Search -->
     <div id="overlay-search">
-        <form method="get" action="../../../../../tenguu-cinema-movie-theater-html-template-2023-11-27-04-49-05-utc/html">
+        <form method="get" action="../../../../../../tenguu-cinema-movie-theater-html-template-2023-11-27-04-49-05-utc/html">
             <input type="text" name="s" placeholder="Search..." autocomplete="off">
             <button type="submit">
                 <i class="fa fa-search"></i>
