--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <title>order</title>
+    <!-- Favicon -->
+    <link th:rel="@{stylesheet}" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link th:rel="@{stylesheet}" type="text/css" href="css/packages.min.css">
+    <link th:rel="@{stylesheet}" type="text/css" href="css/default.css">
+</head>
+<body>
 <div id="order">
     <div class="container">
         <div class="row order-content">
@@ -63,3 +74,5 @@
         </div>
     </div>
 </div>
+</body>
+</html>
