--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <title>order</title>
+    <!-- Favicon -->
+    <link th:rel="@{stylesheet}" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link th:rel="@{stylesheet}" type="text/css" href="css/packages.min.css">
+    <link th:rel="@{stylesheet}" type="text/css" href="css/default.css">
+</head>
+<body>
 <div class="section-content pvb0 bg-cover" data-bg-image="images/coming-bg.jpg" style="background-image: url(&quot;images/coming-bg.jpg&quot;);">
     <div class="container pvt80">
         <div class="row">
