--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-    <header id="header" class="menu-top-left">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <header th:fragment="headerFragment" id="header" class="menu-top-left">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-4">
