--- a/src/main/resources/templates/fragments/order.html
+++ b/src/main/resources/templates/fragments/order.html
@@ -9,7 +9,7 @@
     <link th:rel="@{stylesheet}" type="text/css" href="css/default.css">
 </head>
 <body>
-<div id="order">
+<div id="order" th:fragment="orderFragment">
     <div class="container">
         <div class="row order-content">
             <div class="col-sm-8 col-xs-12 seat_content ph0">
