--- a/src/main/resources/templates/admin/401.html
+++ b/src/main/resources/templates/admin/401.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>404 Error - SB Admin</title>
-    <link href="../../../../../../../../../Downloads/startbootstrap-sb-admin-gh-pages/css/styles.css" rel="stylesheet" />
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{/admin/head :: headContent}">
 </head>
 <body>
 <div id="layoutError">
@@ -21,7 +13,7 @@
                             <h1 class="display-1">401</h1>
                             <p class="lead">Unauthorized</p>
                             <p>Access to this resource is denied.</p>
-                            <a href="index.html">
+                            <a th:href="@{/api/admin}">
                                 <i class="fas fa-arrow-left me-1"></i>
                                 Return to Dashboard
                             </a>
@@ -47,6 +39,6 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="../../../../../../../../../Downloads/startbootstrap-sb-admin-gh-pages/js/scripts.js"></script>
+<script th:src="@{/admin/js/scripts.js}"></script>
 </body>
 </html>
