--- a/src/main/resources/templates/admin/sb-sidenav-menu.html
+++ b/src/main/resources/templates/admin/sb-sidenav-menu.html
@@ -2,15 +2,43 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/admin/head :: headContent}">
 </head>
+<div th:fragment="sbSidenavMenu">
 <body class="sb-nav-fixed">
-<div th:replace="~{/admin/navbar-dark :: navbar}"></div>
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <!-- Navbar Brand-->
+    <a class="navbar-brand ps-3" th:href="@{admin}">관리자 페이지</a>
+    <!-- Sidebar Toggle-->
+    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+    <!-- Navbar Search-->
+    <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <div class="input-group">
+            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+            <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+        </div>
+    </form>
+    <!-- Navbar-->
+    <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#!">Settings</a></li>
+                <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                    <!--                            <a class="dropdown-item" href="admin/logout">Logout</a>-->
+                    <a class="dropdown-item" th:href="@{/api/user/logout}">Logout</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+</nav>
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Core</div>
-                    <a class="nav-link" th:href="@{/api/admin}">
+                    <a class="nav-link" th:href="@{admin}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Dashboard
                     </a>
@@ -22,8 +50,8 @@
                     </a>
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/api/admin/layout-static}">Static Navigation</a>
-                            <a class="nav-link" th:href="@{/api/admin/layout-sidenav-light}">Light Sidenav</a>
+                            <a class="nav-link" th:href="@{admin/layout-static}">Static Navigation</a>
+                            <a class="nav-link" th:href="@{admin/layout-sidenav-light}">Light Sidenav</a>
                         </nav>
                     </div>
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -39,9 +67,9 @@
                             </a>
                             <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" th:href="@{/api/admin/login}">Login</a>
-                                    <a class="nav-link" th:href="@{/admin/register}">Register</a>
-                                    <a class="nav-link" th:href="@{/admin/password}">Forgot Password</a>
+                                    <a class="nav-link" th:href="@{admin/login}">Login</a>
+                                    <a class="nav-link" th:href="@{admin/register}">Register</a>
+                                    <a class="nav-link" th:href="@{admin/password}">Forgot Password</a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
@@ -50,19 +78,19 @@
                             </a>
                             <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" th:href="@{401}">401 Page</a>
-                                    <a class="nav-link" th:href="@{404}">404 Page</a>
-                                    <a class="nav-link" th:href="@{500}">500 Page</a>
+                                    <a class="nav-link" href="admin/401">401 Page</a>
+                                    <a class="nav-link" href="admin/404">404 Page</a>
+                                    <a class="nav-link" href="admin/500">500 Page</a>
                                 </nav>
                             </div>
                         </nav>
                     </div>
                     <div class="sb-sidenav-menu-heading">Addons</div>
-                    <a class="nav-link" th:href="@{/api/admin/charts}">
+                    <a class="nav-link" th:href="@{admin/charts}">
                         <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                         Charts
                     </a>
-                    <a class="nav-link" th:href="@{/api/admin/tables}">
+                    <a class="nav-link" th:href="@{admin/tables}">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Tables
                     </a>
@@ -74,21 +102,15 @@
             </div>
         </nav>
     </div>
-    <div id="layoutSidenav_content">
-        <main>
-            <div class="container-fluid px-4">
-                <h1 class="mt-4">Dashboard</h1>
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
-                <div th:insert="~{admin/cards :: cards}"></div>
-                <div th:replace="~{admin/chart-example :: charts}"></div>
-                <div th:insert="~{admin/datatable-example :: datatable}"></div>
-            </div>
-        </main>
-        <div th:replace="~{admin/footer :: footerFragment}"></div>
-    </div>
 </div>
-<script th:replace="~{admin/scripts :: scripts}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script th:src="@{/admin/js/scripts.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+<script th:src="@{/admin/assets/demo/chart-area-demo.js}"></script>
+<script th:src="@{/admin/assets/demo/chart-bar-demo.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+<script th:src="@{/admin/js/datatables-simple-demo.js}"></script>
 </body>
+</div>
 </html>
+
