--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -671,13 +671,6 @@
                 </div>
             </div>
         </div>
-
-
-
-    <!-- Include jQuery and Scripts -->
-    <script type="text/javascript" th:src="@{js/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{js/packages.min.js}"></script>
-    <script type="text/javascript" th:src="@{js/scripts.min.js}"></script>
-<!-- jQuery easing plugin -->
+    </div>
 </body>
 </html>
