--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/admin/head :: headContent}">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Dashboard - SB Admin</title>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+    <link th:href="@{/admin/css/styles.css}" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body class="sb-nav-fixed">
-<div th:replace="~{/admin/navbar-dark :: navbar}"></div>
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <!-- Navbar Brand-->
+    <a class="navbar-brand ps-3" th:href="@{/api/admin}">관리자페이지</a>
+    <!-- Sidebar Toggle-->
+    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+    <!-- Navbar Search-->
+    <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <div class="input-group">
+            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+            <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+        </div>
+    </form>
+    <!-- Navbar-->
+    <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#!">Settings</a></li>
+                <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#!">Logout</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
@@ -40,8 +73,8 @@
                             <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" th:href="@{/api/admin/login}">Login</a>
-                                    <a class="nav-link" th:href="@{/admin/register}">Register</a>
-                                    <a class="nav-link" th:href="@{/admin/password}">Forgot Password</a>
+                                    <a class="nav-link" th:href="@{/api/admin/register}">Register</a>
+                                    <a class="nav-link" th:href="@{/api/admin/password}">Forgot Password</a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
@@ -50,9 +83,9 @@
                             </a>
                             <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" th:href="@{401}">401 Page</a>
-                                    <a class="nav-link" th:href="@{404}">404 Page</a>
-                                    <a class="nav-link" th:href="@{500}">500 Page</a>
+                                    <a class="nav-link" th:href="@{/api/admin/401}">401 Page</a>
+                                    <a class="nav-link" th:href="@{/api/admin/404}">404 Page</a>
+                                    <a class="nav-link" th:href="@{/api/admin/500}">500 Page</a>
                                 </nav>
                             </div>
                         </nav>
@@ -82,13 +115,13 @@
                     <li class="breadcrumb-item active">Dashboard</li>
                 </ol>
                 <div th:insert="~{admin/cards :: cards}"></div>
-                <div th:replace="~{admin/chart-example :: charts}"></div>
+                <div th:insert="~{admin/chart-example :: charts}"></div>
                 <div th:insert="~{admin/datatable-example :: datatable}"></div>
             </div>
         </main>
-        <div th:replace="~{admin/footer :: footerFragment}"></div>
+        <div th:insert="~{admin/footer :: footerFragment}"></div>
     </div>
 </div>
-<script th:replace="~{admin/scripts :: scripts}"></script>
+<script th:insert="~{admin/scripts :: scripts}"></script>
 </body>
 </html>
