--- a/src/main/resources/templates/admin/navbar-dark.html
+++ b/src/main/resources/templates/admin/navbar-dark.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head th:insert="~{/admin/head :: headContent}">
-    <meta charset="UTF-8">
-    <title>navbar-dark</title>
-</head>
-<body>
 <div th:fragment="navbar">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
@@ -26,11 +19,10 @@
                 <li><a class="dropdown-item" href="#!">Settings</a></li>
                 <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Logout</a></li>
+                <li><a class="dropdown-item" th:href="@{/}">Logout</a></li>
             </ul>
         </li>
     </ul>
 </nav>
 </div>
-</body>
-</html>
+
