--- a/src/main/resources/templates/admin/layout-static.html
+++ b/src/main/resources/templates/admin/layout-static.html
@@ -78,11 +78,12 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Static Navigation</h1>
+                        <h1 class="mt-4">Movie</h1>
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item"><a th:href="@{/api/admin}">Dashboard</a></li>
-                            <li class="breadcrumb-item active">Static Navigation</li>
+                            <li class="breadcrumb-item active">Movie</li>
                         </ol>
+                        <div th:insert="~{admin/cards :: cards}"></div>
                         <div class="card mb-4">
                             <div class="card-body">
                                 <p class="mb-0">
@@ -94,6 +95,7 @@
                                 </p>
                             </div>
                         </div>
+                        <div th:replace="~{admin/datatable-example :: datatable}"></div>
                         <div style="height: 100vh"></div>
                         <div class="card mb-4"><div class="card-body">When scrolling, the navigation stays at the top of the page. This is the end of the static navigation demo.</div></div>
                     </div>
@@ -111,8 +113,6 @@
                 </footer>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script th:src="@{/admin/js/scripts.js}"></script>
         <script>
             document.querySelector('#loginForm').addEventListener('submit', (event) => {
                 event.preventDefault(); // 폼이 기본적으로 전송되지 않도록 방지
@@ -135,5 +135,6 @@
                 });
             })
         </script>
+
     </body>
 </html>
