--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <header th:fragment="headerFragment" id="header" class="menu-top-left">
+        <style>
+            .google-btn {
+                display: inline-flex;
+                align-items: center;
+                padding: 10px 20px;
+                font-size: 16px;
+                font-family: Arial, sans-serif;
+                font-weight: bold;
+                color: #444;
+                background-color: white;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                transition: background-color 0.3s;
+                cursor: pointer;
+                text-decoration: none;
+            }
+
+            .google-btn:hover {
+                background-color: #f5f5f5;
+            }
+
+            .google-btn img {
+                margin-right: 10px;
+                width: 20px;
+                height: 20px;
+            }
+
+            .google-btn span {
+                font-size: 14px;
+            }
+        </style>
         <body class="sticky-menu">
         <div id="loader">
             <div class="loader-ring">
@@ -15,11 +47,8 @@
                 <div class="col-md-6 col-sm-6 col-xs-4">
                     <a href="/" id="logo" title="Tenguu" class="logo-image" th:data-bg-image="@{/images/logo.png}">Tenguu</a>
                 </div>
-                <div class="col-md-4 col-md-offset-2 col-sm-6 col-xs-8 phl0">
-                    <div class="header_author">
-                        <a th:href="@{/api/user/login}">Login</a>
-                        <img src="images/user.png" class="user" alt="user">
-                    </div>
+                <div >
+                    <a href="/api/user/login" class="google-btn">로그인</a>
                     <div class="header_register">
                         <a th:href="@{/single}">Register</a>
                         <span>3</span>
