240924 1634 이미지 서버스토리지에 업로드 다시 커밋

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,27 +59,28 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script th:src="@{/admin/js/scripts.js}"></script>
-<!--<script>-->
-<!--    document.querySelector('#loginForm').addEventListener('submit', (event) => {-->
-<!--        event.preventDefault(); // 폼이 기본적으로 전송되지 않도록 방지-->
+<script>
+    document.querySelector('#loginForm').addEventListener('submit', (event) => {
+        event.preventDefault(); // 폼이 기본적으로 전송되지 않도록 방지
 
-<!--        const email = document.getElementById('inputEmail').value;-->
-<!--        const password = document.getElementById('inputPassword').value;-->
+        const email = document.getElementById('inputEmail').value;
+        const password = document.getElementById('inputPassword').value;
 
-<!--        // jQuery 추가하면 다음을 사용할 수 있음-->
-<!--        // const email = $('#inputEmail').val();-->
-<!--        // const password = $('#inputPassword').val();-->
+        // jQuery 추가하면 다음을 사용할 수 있음
+        // const email = $('#inputEmail').val();
+        // const password = $('#inputPassword').val();
 
-<!--        axios.post("/api/admin/login", {-->
-<!--            email: email,-->
-<!--            password: password-->
-<!--        }).then(res => {-->
-<!--            console.log('Login successful:', res.data);-->
-
-<!--        }).catch(err => {-->
-<!--            console.log("Login failed: ", err);-->
-<!--        });-->
-<!--    })-->
-<!--</script>-->
+        axios.post("/api/admin/login", {
+            email: email,
+            password: password
+        }).then(res => {
+            console.log('Login successful:', res.data);
+            alert("이메일: " + email +"비밀번호: " + password);
+            window.location.href("localhost:8080/api/admin/home")
+        }).catch(err => {
+            console.log("Login failed: ", err);
+        });
+    })
+</script>
 </body>
 </html>
