--- a/src/main/resources/templates/admin/layout-sidenav-light.html
+++ b/src/main/resources/templates/admin/layout-sidenav-light.html
@@ -74,9 +74,9 @@
                                     </a>
                                     <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="401.html">401 Page</a>
-                                            <a class="nav-link" href="404.html">404 Page</a>
-                                            <a class="nav-link" href="500.html">500 Page</a>
+                                            <a class="nav-link" th:href="@{401}">401 Page</a>
+                                            <a class="nav-link" th:href="@{404}">404 Page</a>
+                                            <a class="nav-link" th:href="@{500}">500 Page</a>
                                         </nav>
                                     </div>
                                 </nav>
