--- a/src/main/resources/templates/admin/layout-static.html
+++ b/src/main/resources/templates/admin/layout-static.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/admin/head :: headContent}">
-</head>
+<head th:replace="~{/admin/head :: headContent}"></head>
+
     <body>
         <div th:replace="~{/admin/navbar-dark :: navbar}"></div>
         <div id="layoutSidenav">
@@ -95,8 +95,73 @@
                                 </p>
                             </div>
                         </div>
-                        <div th:replace="~{admin/datatable-example :: datatable}"></div>
-                        <div style="height: 100vh"></div>
+<!--                        <div th:replace="~{admin/datatable-example :: datatable}"></div>-->
+
+                        <div id="spreadsheet"></div>
+                        <script>
+                            $(document).ready(function() {
+                                console.log("ready!");
+
+                                var data = [
+                                    ['Jazz', 'Honda', '2019-02-12', '', true, '$ 2.000,00', '#777700'],
+                                    ['Civic', 'Honda', '2018-07-11', '', true, '$ 4.000,01', '#007777'],
+                                ];
+
+                                jspreadsheet(document.getElementById('spreadsheet'), {
+                                    data: data,
+                                    columns: [
+                                        {
+                                            type: 'text',
+                                            title: 'Car',
+                                            width: 90
+                                        },
+                                        {
+                                            type: 'dropdown',
+                                            title: 'Make',
+                                            width: 120,
+                                            source: [
+                                                "Alfa Romeo",
+                                                "Audi",
+                                                "Bmw",
+                                                "Chevrolet",
+                                                "Chrystler",
+                                            ]
+                                        },
+                                        {
+                                            type: 'calendar',
+                                            title: 'Available',
+                                            width: 120
+                                        },
+                                        {
+                                            type: 'image',
+                                            title: 'Photo',
+                                            width: 120
+                                        },
+                                        {
+                                            type: 'checkbox',
+                                            title: 'Stock',
+                                            width: 80
+                                        },
+                                        {
+                                            type: 'numeric',
+                                            title: 'Price',
+                                            mask: '$ #.##,00',
+                                            width: 80,
+                                            decimal: ','
+                                        },
+                                        {
+                                            type: 'color',
+                                            width: 80,
+                                            render: 'square',
+                                        },
+                                    ],
+                                    tableOverflow: true,  // 테이블이 div 크기에 맞도록 설정
+                                    tableHeight: '500px'  // 테이블의 높이를 500px로 설정
+                                });
+
+                            });
+                        </script>
+
                         <div class="card mb-4"><div class="card-body">When scrolling, the navigation stays at the top of the page. This is the end of the static navigation demo.</div></div>
                     </div>
                 </main>
@@ -135,6 +200,8 @@
                 });
             })
         </script>
+
+
 
     </body>
 </html>
