240926 1434 영화 정보 등록(register) 기능 완성, 영화 정보 보여주기(layout-static) 성공, 영화정보 delete기능 완성

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -24,7 +24,8 @@
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" th:href="@{/api/admin/layout-static}">Movie</a>
                             <a class="nav-link" th:href="@{/api/admin/layout-sidenav-light}">Light Sidenav</a>
-                            <a class="nav-link" th:href="@{/api/movie}">Movie</a>
+                            <a class="nav-link" th:href="@{/api/movie/register}">영화정보 등록하기</a>
+                            <a class="nav-link" th:href="@{/api/movie/update}">영화정보 수정하기</a>
                         </nav>
                     </div>
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
