--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -815,6 +815,8 @@
     <script type="text/javascript" th:src="@{js/scripts.min.js}"></script>
 
     <script>
+        let historys = [1234]
+
         const test = () => {
             axios({
                 method: "get",
